# velvet

./: .gitignore  Cargo.toml  README.md
velvet/: Cargo.toml
velvet/src/: lib.rs  prelude.rs  worker.rs
velvet/src/codegen/: codegen.rs  func_finding.rs  mod.rs  quotes.rs
velvet/src/queue/: arcmutex_queue.rs  crossbeam_queue.rs  mod.rs  unsafe_queue.rs
velvet_examples/: Cargo.toml
velvet_examples/adapint/: Cargo.toml
velvet_examples/adapint/src/: main.rs
velvet_examples/fib/: Cargo.toml
velvet_examples/fib/src/: main.rs
velvet_examples/matmul/: Cargo.toml  build.rs
velvet_examples/matmul/src/: main.rs  matrix_par.rs
velvet_examples/nqueens/: Cargo.toml
velvet_examples/nqueens/src/: main.rs
velvet_examples/tsp/: Cargo.toml  build.rs
velvet_examples/tsp/src/: main.rs
velvet_macros/: Cargo.toml
velvet_macros/src/: lib.rs  par_iter.rs  spawn_known.rs  spawn_unknown.rs  spawnable.rs  sync.rs  velvet_main.rs
